src/assets/styles/components/topNavbar.css
.navbar {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  position: fixed;
  z-index: 10; /*bring the navbar to first element(without it,
  welcome-img will take up all the space covering
  title-subtitle and navbar)*/
  top: -100px;
  width: 100%;
  height: 0;
  background-color: var(--style-black);
  padding-right: 2.5rem;
  overflow-y: hidden;
  transition: 0.5s;
  border-bottom-right-radius: 5rem;
}

.navbar__ul__list {
  text-shadow: 0 0 1rem;
  font-size: 1.3rem;
  font-weight: 100;
  display: flex;
  text-transform: uppercase;
  letter-spacing: 0.3rem;
  gap: 1.2rem;
  list-style: none;
}

.navbar__list {
  animation: color-change 9s infinite;
  text-decoration: none;
}

.navbar__list:hover,
.close-navbar__btn:hover {
  animation: none;
  color: var(--style-lightblue);
}

.open-navbar {
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent;
  width: 100%;
}

.open-navbar__btn,
.close-navbar__btn {
  cursor: pointer;
  transition: 0.5s;
}

.open-navbar__btn {
  font-size: 2.5rem;
  font-weight: 100;
  text-shadow: 0 0 1rem;
  color: var(--style-lightblue);
  margin-top: 0.5rem;
}

.open-navbar__btn:hover {
  background-color: var(--style-lightGray);
  border-radius: 4rem;
}

/* BELOW ---- GOOGLE ICONS */
.open-navbar__btn > .material-symbols-outlined {
  font-variation-settings: "FILL" 0, "wght" 100, "GRAD" 0, "opsz" 48;
}
/* ABOVE ---- GOOGLE ICONS */

.close-navbar__btn {
  font-size: 2.1rem;
  font-weight: 100;
  margin-left: 1.5rem;
  padding-left: 1.1rem;
  text-decoration: none;
  animation: color-change 9s infinite;
  border-left: 1px solid var(--style-lightblue);
}

/* BELOW ---- GOOGLE ICONS */
.close-navbar__btn > .material-symbols-outlined {
  font-variation-settings: "FILL" 0, "wght" 100, "GRAD" 0, "opsz" 48;
}
/* ABOVE ---- GOOGLE ICONS */

